# poetry-managed-td

./: .gitattributes  LICENSE  README.md  index.md  pyproject.toml  pysubprocess_op.11.toe  pysubprocess_op.13.toe  pysubprocess_op.15.toe  pysubprocess_op.19.toe  pysubprocess_op.20.toe  pysubprocess_op.bat  pysubprocess_op.dev.bat  pysubprocess_op.toe
Backup/: pysubprocess_op.10.toe  pysubprocess_op.12.toe  pysubprocess_op.16.toe  pysubprocess_op.17.toe  pysubprocess_op.18.toe  pysubprocess_op.8.toe  pysubprocess_op.9.toe
docs/source/: api.rst  conf.py  index.rst
pysubprocess_op/: __init__.py  experiment.py  ext.py  net.tox
